# Dreamerv4-MC

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: inference_ui.sh
src/inference/: infer.py  mc_vw_infer.py  prefill.py
src/kernels/: rope_triton.py
src/modules/: __init__.py  actokenizer.py  dynamic_model.py  kvcache.py  pe.py  tokenizer.py
src/utils/: utils.py
ui/: inference_ui.py
ui/static/: app.js  index.html
