[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamer4-mc"
version = "2.1.0"
description = ""
authors = [
    {name = 'Ming Gao', email='dujinshidai30@gmail.com'}
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torchvision>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub[cli]"
]

[project.urls]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["**/*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true


